CKAD/14-Blue-Green-Deployment.yaml
# in Blue-Green Deployment, we create both environments, then switch from Blue to Green (suddenly)
# each deployment has it's own service (2 deployments, 2 services, the service chooses the pod based on version)

apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: v1 ####
  type: ClusterIP
  ports:
    - port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-blue ####
  labels:
    app: myapp
spec:
  selector:
    matchLabels:
      type: front-end
  replicas: 5
  template:
    metadata:
      labels:
        app: v1 ####
        type: front-end
    spec:
      containers:
        - name: app-container
          image: my-app-image:1.0 ####

---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: v2 ####
  type: ClusterIP
  ports:
    - port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-green ####
  labels:
    app: myapp
spec:
  selector:
    matchLabels:
      type: front-end
  replicas: 5
  template:
    metadata:
      labels:
        type: front-end
        app: v2 ####
    spec:
      containers:
        - name: app-container
          image: my-app-image:2.0 ####
