CKAD/22-admission-webhook-example.yaml
# You are deploying a validating webhook that blocks Deployments unless they have "metadata.labels.environment" set to one of: "dev", "qa", "prod"

# Namespace for the webhook resources
apiVersion: v1
kind: Namespace
metadata:
  name: webhook-system

---
# Deployment for the webhook server. The webhook listens on port 8443 and serves /validate

apiVersion: apps/v1
kind: Deployment
metadata:
  name: environment-validator
  namespace: webhook-system
  labels:
    app: environment-validator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: environment-validator
  template:
    metadata:
      labels:
        app: environment-validator
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1234
        fsGroup: 1234
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: environment-validator
      containers:
        - name: webhook
          image: myregistry.io/webhooks/environment-validator:1.0.0
          args:
            # our arguments refer to the tls certificate and private key mounted via volume
            - "--tls-cert-file=/tls/tls.crt"
            - "--tls-private-key-file=/tls/tls.key"
          ports:
            - name: https
              containerPort: 8443
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /readyz
              port: https
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /healthz
              port: https
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          # mount the tls certificate inside this container
          volumeMounts:
            - name: tls-certs
              mountPath: /tls
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: tls-certs
          secret:
            secretName: validating-webhook-certs

---
# Service for the Webhook, This is important because the API server talks to the webhook using a service DNS name

apiVersion: v1
kind: Service
metadata:
  name: environment-validator-svc
  namespace: webhook-system
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: environment-validator


---
# ValidatingWebhook config
# tells Kubernetes to send incoming API requests to your webhook

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: deployment-environment-validator
webhooks:
  - name: environment.validator.example.com
    # apply this rule for apps/v1 (api version for deployments), when they are created or updated
    rules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments"]
    clientConfig:
      # send the to-be-created deployments to service endpoint of environment-validator pods (the logic for validation is inside this pod), at port 443 and /validate
      # the validation logic runs inside the pods of the environment-validator Deployment
      service:
        name: environment-validator-svc
        namespace: webhook-system
        path: /validate
        port: 443
      caBundle: <BASE64-ENCODED-CA-CERT>
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Fail
    timeoutSeconds: 5

    
    
# goLang logic inside the environment-validator deployment:

# func validateDeployment(dep appsv1.Deployment) error {
#     env, ok := dep.Labels["environment"]
#     if !ok {
#         return fmt.Errorf("missing required label: environment")
#     }

#     allowed := map[string]bool{
#         "dev":  true,
#         "qa":   true,
#         "prod": true,
#     }

#     if !allowed[env] {
#         return fmt.Errorf("invalid environment value: %s", env)
#     }
#     return nil
# }

# error shown to users => Error from server: admission webhook "environment.validator.example.com" denied the request: missing required label: environment
